[package]
name = "rust_websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-websockets = { version = "0.13", features = ["server", "sha1_smol"] }
